--- a/blocks/footer-global/footer-global.css
+++ b/blocks/footer-global/footer-global.css
@@ -6,12 +6,13 @@
 }
 
 .footer-global-wrapper {
-    padding-left: 3%;
+    padding-left: 2.5%;
 }
 
 .footer-global-wrapper ul {
     display: flex;
     justify-content: space-around;
+    margin-right: 50px;
 }
 
 .footer-global-wrapper li {
