--- a/blocks/stay-connected/stay-connected.css
+++ b/blocks/stay-connected/stay-connected.css
@@ -6,8 +6,8 @@
 .stay-connected {
     background: var(--grey-shade);
     margin-right: 10%;
-    margin-left: 13%;
-    width: 72%;
+    margin-left: 12.5%;
+    width: 73%;
     height: 115px;
     padding: 2% 1% 1%;
     margin-top: -7%;
@@ -29,7 +29,7 @@
     height: 55px;
     padding-left: 15px;
     padding-right: 15px;
-    width: 42%;
+    width: 50%;
     box-sizing: border-box;
     font-family: 'Helvetica';
     font-size: 17px
